# cppengine

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: BarData.cpp.01C349BB543F6BA9.idx  BarData.h.67D5C19C5295C129.idx  OhlcMapper.cpp.ABD1F652307165FB.idx  OhlcMapper.h.F674E4D4AED89AD9.idx  SqliteHelper.cpp.09ECA00B213500AC.idx  SqliteHelper.h.AA8EB9FFAFD7971E.idx  StatCalculator.cpp.27B9E957827E4AE8.idx  StatCalculator.h.D22E375163DA4771.idx  main.cpp.50A79E3B201845AA.idx
include/: BarData.h  IStrategy.h  OhlcMapper.h  ReturnsCalculator.h  SqliteHelper.h  StatAccumulator.h  StatCalculator.h
src/: BarData.cpp  OhlcMapper.cpp  ReturnsCalculator.cpp  SqliteHelper.cpp  StatAccumulator.cpp  StatCalculator.cpp  main.cpp
tests/: AAPL.json  APPLmin.json
